# llama.rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.claude/plans/: matmul-q8-0-direto.plan.md
crates/ggml-cpu/: Cargo.toml
crates/ggml-cpu/src/: dequant.rs  error.rs  lib.rs
crates/gguf/: Cargo.toml
crates/gguf/src/: error.rs  file.rs  lib.rs  parse.rs  reader.rs  test_support.rs  types.rs
crates/gguf/tests/: fuzz_parse.rs  meta_snapshot.rs  real_model.rs
crates/llama-cli/: Cargo.toml
crates/llama-cli/src/: args.rs  lib.rs  main.rs  runner.rs
crates/llama-cli/tests/: args_test.rs  greedy_gate.rs
crates/llama-model/: Cargo.toml
crates/llama-model/src/: attention.rs  config.rs  error.rs  generate.rs  gpu.rs  lib.rs  model.rs  ops.rs  spin_pool.rs  weights.rs
crates/llama-model/tests/: oracle_forward.rs  quant_load.rs
crates/llama-sampling/: Cargo.toml
crates/llama-sampling/src/: lib.rs  sampler.rs
crates/llama-tokenizer/: Cargo.toml
crates/llama-tokenizer/src/: bpe.rs  error.rs  lib.rs  spm.rs  vocab.rs
crates/llama-tokenizer/tests/: oracle_corpus.rs
crates/llama-vulkan/: Cargo.toml  build.rs
crates/llama-vulkan/shaders/: q8_0_matvec.comp
crates/llama-vulkan/src/: alloc.rs  backend.rs  device.rs  dual_gpu.rs  lib.rs  matmul.rs  model_gpu.rs  pipeline.rs  tensor.rs
crates/llama-vulkan/tests/: integration.rs
docs/: deep-research-vulkan-performance-llama-rs.md  llama_cpp_qwen_analysis.md
docs/superpowers/plans/: 2026-06-03-fase-0-infra-oraculo.md  2026-06-03-fase-1-gguf-tokenizer.md  2026-06-03-fase2-forward-pass-cpu-f32.md  2026-06-03-fase3-quantizacao.md  2026-06-03-fase4-sampling-llama-cli.md  2026-06-04-fase5-streaming-lazy-cache.md  2026-06-04-matmul-rayon.md  2026-06-05-fase6-vulkan-dual-mi50.md  2026-06-10-fase7-vulkan-mi50-forward-e2e.md
docs/superpowers/specs/: 2026-06-03-fase-1-gguf-tokenizer-design.md  2026-06-03-fase2-forward-pass-cpu-f32-design.md  2026-06-03-llama-rs-rewrite-design.md  2026-06-04-matmul-rayon-design.md
oracle/: Cargo.toml
oracle/src/: error.rs  lib.rs  main.rs  parse.rs  runner.rs
oracle/tests/: oracle_integration.rs
refs/: greedy.txt  stories260k-meta.json  tokens.json
scripts/: benchmark.sh  build-oracle.sh  fmt-hook.sh  gate.sh  get-model.sh
