[workspace]
resolver = "3"
members = ["oracle"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
thiserror = "2"
serde_json = "1"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
cast_possible_wrap = "deny"
indexing_slicing = "warn"
