[workspace]
resolver = "3"
members = ["oracle", "crates/gguf", "crates/llama-tokenizer", "crates/llama-model", "crates/ggml-cpu", "crates/llama-sampling", "crates/llama-cli"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
thiserror = "2"
serde_json = "1"
proptest = "1"
gguf = { path = "crates/gguf" }
llama-tokenizer = { path = "crates/llama-tokenizer" }
half = "2"
ggml-cpu = { path = "crates/ggml-cpu" }
rand = "0.9"
llama-sampling = { path = "crates/llama-sampling" }
llama-model = { path = "crates/llama-model" }
clap = { version = "4", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
cast_possible_wrap = "deny"
indexing_slicing = "warn"
