[package]
name = "llama-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "llama-cli"
path = "src/main.rs"

[dependencies]
thiserror.workspace = true
gguf.workspace = true
llama-tokenizer.workspace = true
llama-model.workspace = true
llama-sampling.workspace = true
rand.workspace = true
clap = { version = "4", features = ["derive"] }
rayon.workspace = true
llama-vulkan = { path = "../llama-vulkan", optional = true }

[features]
gpu = ["llama-vulkan", "llama-model/gpu"]

[lints]
workspace = true
