[package]
name = "llama-model"
version = "0.1.0"
edition.workspace = true

[dependencies]
thiserror.workspace = true
gguf.workspace = true
ggml-cpu.workspace = true
llama-tokenizer.workspace = true
llama-sampling.workspace = true
rand.workspace = true
rayon.workspace = true
half.workspace = true

[lints]
workspace = true
